; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_subselect.c_subplan_is_hashable.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/optimizer/plan/extr_subselect.c_subplan_is_hashable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { double, i32 }

@SizeofHeapTupleHeader = common dso_local global i32 0, align 4
@work_mem = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @subplan_is_hashable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @subplan_is_hashable(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca double, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load double, double* %6, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = call double @MAXALIGN(i32 %10)
  %12 = load i32, i32* @SizeofHeapTupleHeader, align 4
  %13 = call double @MAXALIGN(i32 %12)
  %14 = fadd double %11, %13
  %15 = fmul double %7, %14
  store double %15, double* %4, align 8
  %16 = load double, double* %4, align 8
  %17 = load i64, i64* @work_mem, align 8
  %18 = mul nsw i64 %17, 1024
  %19 = sitofp i64 %18 to double
  %20 = fcmp ogt double %16, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

22:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %21
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local double @MAXALIGN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
